# synapse-daily

./: .env.example  .gitignore  README.md  SYNAPSE_DEEP_DIVE.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: daily_newsletter.yml  deploy.yml
api/: confirm.py  requirements.txt  subscribe.py
src/synapse/: __init__.py  collector.py  config.py  curator.py  mailer.py  main.py  ml_ranker.py  renderer.py
templates/: email.html
tests/: test_pipeline.py
web/: index.html
web/static/css/: style.css
web/static/js/: subscribe.js
