[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synapse-daily"
version = "1.0.0"
description = "Daily AI & ML newsletter — curated by ML, written by Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser==6.0.11",
    "anthropic==0.49.0",
    "jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "sentence-transformers==3.4.1",
    "torch==2.6.0",
    "numpy==2.2.4",
    "scikit-learn==1.6.1",
    "httpx==0.28.1",
    "flask==3.1.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.5", "pytest-mock==3.14.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
